fixed margin bottom on carousel for mbl and desktop.  changed show page carousel height on mobile

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -230,6 +230,7 @@
 }
 
 .thumbnail {
+  margin-top: 2px;
   cursor: pointer;
 }
 
